Bug 265448 - Akonadi settings seem to indicate support for using an external PostgreSQL server but not an internal one
Summary: Akonadi settings seem to indicate support for using an external PostgreSQL se...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: 1.4.90
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-04 20:00 UTC by Ivan D Vasin
Modified: 2011-09-18 22:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan D Vasin 2011-02-04 20:00:18 UTC
Version:           1.4.90 (using KDE 4.6.0) 
OS:                Linux

AkonadiTray and $HOME/.config/akonadi/akonadiserverrc settings for akonadiserver to use an external PostgreSQL server, and they do not provide any clear settings to use an internal PostgreSQL server.  but according to comment 4 of bug 265155 [1], using an external PostgreSQL server is not supported, and using an internal one is supported.  why not indicate support for both, since it is in fact possible to configure akonadiserver to use either one?  this is already the case for MySQL.

[1] https://bugs.kde.org/show_bug.cgi?id=265155#c4

Reproducible: Always

Steps to Reproduce:
examine the PostgreSQL settings in AkonadiTray or in $HOME/.config/akonadi/akonadiserverrc.

Actual Results:  
AkonadiTray and $HOME/.config/akonadi/akonadiserverrc provide explicit indications of support for using an external PostgreSQL server and no explicit indications of support for using an internal PostgreSQL server.

Expected Results:  
AkonadiTray and $HOME/.config/akonadi/akonadiserverrc provide explicit indications of support for using either an external or an internal PostgreSQL server.
Comment 1 Christophe Marin 2011-09-18 22:43:39 UTC
Git commit 79ec1d2700330941ff1a5a2ef28b2e95f307fb6a by Christophe Giboudeaux.
Committed on 19/09/2011 at 00:42.
Pushed by cgiboudeaux into branch 'master'.

Add a checkbox to deselect the internal PSQL server.

BUG: 265448
FIXED-IN: 4.8.0

M  +3    -0    kcm/serverconfigmodule.cpp
M  +4    -4    kcm/servermysqlstorage.ui
M  +52   -5    kcm/serverpsqlstorage.ui

http://commits.kde.org/kdepim-runtime/79ec1d2700330941ff1a5a2ef28b2e95f307fb6a