Add a checkbox to deselect the internal PSQL server.

BUG: 265448
FIXED-IN: 4.8.0